cabal-version:      2.4
name:               faucet-backend
version:            0.1.0.0
license:            Apache-2.0
license-files:      LICENSE
author:             BinarApps
maintainer:         BinarApps

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -O2 -flate-specialise -fspecialise-aggressively

library
    import: lang
    exposed-modules:
      Faucet,
      Faucet.Data,
      Faucet.API,
      Faucet.Internal,
      Config
    build-depends:
      base >= 4.9 && < 5,
      aeson,
      aeson-pretty,
      bytestring,
      containers,
      cardano-api,
      cardano-cli,
      ouroboros-network,
      mtl,
      text,
      servant,
      servant-server,
      wai,
      wai-cors,
      conferer,
      conferer-dhall,
      conferer-warp,
      warp,
    hs-source-dirs: src

executable faucet-app
  import: lang
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && <5,
    faucet-backend,
  default-language: Haskell2010